<resources>
    <string name="app_name">Lexi</string>
    <string name="welcome_to_lexi">Welcome to LEXI</string>
    <string name="signin">SignIn</string>
    <string name="choose_your_event">choose_your_event</string>
    <string name="Wedding">Wedding</string>
    <string name="Birthday">birthday</string>
    <string name="Beach_Party">beach_party</string>
    <string name="chooseyourevent">Choose your event</string>
    <string name="birthday">Bithday</string>
    <string name="beachParty">beachParty</string>
    <string name="signIn">SIGN IN</string>
    <string name="photographyfragment">photographyFragment</string>
    <string name="decorating">Decoratingfragment</string>
    <string name="catering_fragment">catering fragment</string>
    <string name="title_activity_wedding">wedding</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="e_jrpaycbi">E.jrpaycbi</string>
    <string name="decoration">Decoration</string>
    <string name="Catering">Catering</string>
    <string name="title_activity_birthday">birthday</string>
    <string name="photography">Photography</string>
    <string name="title_activity_beach_party">beachParty</string>
    <string name="Decorating">Decorating</string>
    <string name="phorography">Phorography</string>
    <string name="log_as_user">Log as User</string>
    <string name="log_as_admin">Log as Admin</string>
    <string name="title">title</string>
    <string name="icon">icon</string>
    <string name="see_as_user">See As User</string>
    <string name="login_here">Login here</string>
    <string name="pasword">Pasword</string>
    <!--<string name="email">Email</string>-->
    <!--<string name="name">Name</string>-->
    <string name="sign_in">Sign IN</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="add_cater">Add Cater</string>
    <string name="log_as_admin1">Log As Admin</string>
    <string name="this_is_admin_page">This Is admin page</string>
    <string name="long_press_photography">Long Press Photography</string>
    <string name="long_press_decorating">Long press Decorating</string>
    <string name="long_press_catering">Long press catering</string>
    <string name="add_photographer">Add Photographer</string>
    <string name="add_decorator">Add Decorator</string>
    <string name="aee">aee</string>
    <string name="add">add</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_email">Enter Email</string>
    <!--<string name="age">Age</string>-->
    <!--<string name="experience">Experience</string>-->
    <string name="enter_name">Enter Name</string>
    <string name="add_option">Add option</string>
    <string name="delete_option">Delete Option</string>
    <string name="update_option">Update option</string>
    <string name="name">Name</string>
    <string name="experience">Experience</string>
    <string name="textview">TextView</string>
    <string name="age">Age</string>
    <string name="email">Email</string>


</resources>
