<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_TV_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:text="@string/chooseyourevent"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/menu_btn_Wedding"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_light"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="208dp"
        android:text="@string/Wedding" />

    <Button
        android:id="@+id/menu_btn_Birthday"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="208dp"
        android:text="@string/Birthday" />

    <Button
        android:id="@+id/menu_btn_beachParty"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_green_light"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:text="@string/Beach_Party" />
</RelativeLayout>