<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".AddPhotographer">

    <Button
        android:id="@+id/AddPhotography_btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddPhotographer_ET_Email" />

    <EditText
        android:id="@+id/AddPhotographer_ET_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="phone"
        android:padding="10dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/AddPhotographer_ET_Experience"
        app:layout_constraintTop_toBottomOf="@+id/AddPhotographer_ET_Experience" />

    <EditText
        android:id="@+id/AddPhotographer_ET_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:text="@string/enter_email"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/AddPhotographer_ET_Phone"
        app:layout_constraintTop_toBottomOf="@+id/AddPhotographer_ET_Phone" />

    <EditText
        android:id="@+id/AddPhotographer_ET_Nmae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="182dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/enter_name"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddPhotographer_ET_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/age"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/AddPhotographer_ET_Nmae"
        app:layout_constraintTop_toBottomOf="@+id/AddPhotographer_ET_Nmae" />

    <EditText
        android:id="@+id/AddPhotographer_ET_Experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/experience"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/AddPhotographer_ET_Age"
        app:layout_constraintTop_toBottomOf="@+id/AddPhotographer_ET_Age" />
</android.support.constraint.ConstraintLayout>