<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    tools:context=".AddActivity">

    <Button
        android:id="@+id/Add_btn_photography"
        android:layout_width="250sp"
        android:layout_height="54dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="75dp"
        android:background="@drawable/btn_background"
        android:text="@string/add_photographer"
        app:layout_constraintTop_toBottomOf="@+id/Add_btn_Catering"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Add_btn_Decorator"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/add_decorator"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="-250dp"
        app:layout_constraintVertical_bias="0.848" />

    <Button
        android:id="@+id/Add_btn_Catering"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="-250dp"
        android:background="@drawable/btn_background"
        android:text="@string/add_cater"
        app:layout_constraintVertical_bias="0.0" />
</android.support.v7.widget.LinearLayoutCompat>