<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".AdminActivity">

    <Button
        android:id="@+id/admin_btn_addPhotographer"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="@drawable/btn_background"
        android:padding="10dp"
        android:text="@string/add_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_btn_addDecorator"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/btn_background"
        android:padding="10dp"
        android:text="@string/delete_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_btn_addPhotographer" />

    <Button
        android:id="@+id/admin_btn_addCater"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/btn_background"
        android:padding="10dp"
        android:text="@string/update_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_btn_addDecorator" />
</android.support.constraint.ConstraintLayout>